# analisador-l-xico-algol

./: .gitignore  CMakeLists.txt  README.MD  erro_bloco_nao_fechado.alg  erro_lexico_atribuicao_incorreta.algo  erro_lexico_simbolo_nao_conhecido.alg  erro_semantico_variavel_nao_declarada.alg  erro_sintatico_falta_de_fechar_colchetes.alg  erro_sintatico_falta_de_parenteses.alg  erro_sintatico_fechar_bloco_sem_abrir.alg  erro_sintatico_ponto_e_virgula_fora_do_logar.alg  main.cpp  mul.alg  soma.alg  terminais.h
geradordecodigo/: Gerador.cpp  Gerador.h
lexico/: AnalisadorLexico.cpp  AnalisadorLexico.h  contagem.cpp  contagem.h  definidorToken.cpp  definidorToken.h  leitorValorToken.cpp  leitorValorToken.h  separador.cpp  separador.h
semantico/: AnalisadorSemantico.cpp  AnalisadorSemantico.h
sintatico/: AnalisadorSintaticoMain.cpp  AnalisadorSintaticoMain.h  No.cpp  No.h
table/: controledetabela.c  controledetabela.cpp  controledetabela.h  symbol.c  symbol.cpp  symbol.h  table.c  table.cpp  table.h  types.c  types.cpp  types.h  util.c  util.cpp  util.h
tests/: separadorTest.cpp
tests/lexico/: abreArquivo.cpp  abreArquivo.h  definidorTokenTest.cpp  leitorValorTokenTest.cpp  lexicoTest.cpp
tests/sintatico/: arvoreTest.cpp
